# home-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENCE  LICENSE  PHASE1-COMPLETE.md  README.md  REVIEW.md  coverage.json  home-dashboard-skeleton  playlists.json  pyproject.toml
api_app/: pyproject.toml
api_app/api_app/: config.py  dependencies.py  main.py
api_app/api_app/routers/: phone_ifttt.py  spotify.py  weather.py
api_app/api_app/services/: __init__.py  phone_ifttt_service.py  spotify_service.py  tv_tizen_service.py  weather_service.py
api_app/src/: __init__.py  config.py  main.py  models.py
api_app/src/routers/: phone_ifttt.py  spotify.py  tv_tizen.py  weather.py
api_app/src/services/: phone_ifttt_service.py  spotify_service.py  tv_tizen_service.py  weather_service.py
docker/: DockerFile.api  DockerFile.ui  Dockerfile  docker-compose.yml  start.sh
docs/: RASPBERRY_PI_SETUP.md  architecture.md  dev-notes.md  endpoints.md  tiles.md
home_dashboard/: __init__.py  cache.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  protocols.py  pyproject.toml  security.py  state_managers.py
home_dashboard/core/: app_factory.py  lifespan.py  middleware.py
home_dashboard/home_dashboard/: config.py  dependencies.py  main.py
home_dashboard/home_dashboard/models/: base_models.py  phone.py  spotify.py  weather.py
home_dashboard/home_dashboard/routers/: pages.py  phone_ifttt.py  phone_ifttt_router.py  spotify.py  spotify_router.py  tv_tizen_router.py  view_router.py  weather_router.py
home_dashboard/home_dashboard/services/: spotify_service.py  weather_service.py
home_dashboard/home_dashboard/static/: style.css
home_dashboard/home_dashboard/templates/tiles/: phone.html  weather.html
home_dashboard/middleware/: error_handlers.py  logging_middleware.py
home_dashboard/models/: __init__.py  base_models.py  phone.py  spotify.py  weather.py
home_dashboard/routers/: __init__.py  health_router.py  phone_ifttt_router.py  spotify_router.py  tv_tizen_router.py  view_router.py  weather_router.py
home_dashboard/services/: phone_ifttt_service.py  spotify_service.py  tv_tizen_service.py  weather_service.py
home_dashboard/static/: style.css
home_dashboard/templates/: base.html  index.html  spotify_auth_manual.html  spotify_auth_success.html
home_dashboard/templates/tiles/: phone.html  quick_actions.html  spotify.html  spotify_playback_status.html  status.html  weather.html
home_dashboard/utils/: env_updater.py
home_dashboard/views/: __init__.py  template_renderer.py
infra/systemd/: docker-dashboard.service  kiosk-chromium.service
scripts/: Migrate-ProjectStructure.ps1  pi-setup.sh
shared/: pyproject.toml
shared/shared/: __init__.py
shared/shared/models/: __init__.py  weather.py
tests/: conftest.py
tests/integration/: test_api_routes.py  test_api_routes_modern.py  test_router_integration.py
tests/unit/api_app/: test_phone_ifttt_service.py  test_spotify_service.py  test_spotify_service_modern.py  test_tv_tizen_service.py  test_weather_service.py  test_weather_service_modern.py
tests/unit/home_dashboard/: test_config.py  test_dependencies.py  test_exceptions.py  test_main.py  test_phone_service.py  test_routers.py  test_spotify_service.py  test_state_managers.py  test_tv_service.py  test_weather_models.py  test_weather_service.py
ui_app/: pyproject.toml
ui_app/src/: app.py
ui_app/src/tiles/: layout_basic.py  quick_actions.py  spotify.py  status.py  weather.py
ui_app/ui_app/: __init__.py  app.py  config.py
ui_app/ui_app/tiles/: __init__.py  phone.py  quick_actions.py  spotify.py  weather.py
