[tool.poetry]
name = "home-dashboard"
version = "0.4.0"
description = "Home Dashboard"
authors = ["Jelle Hilbrands <jelle.hilbrands@outlook.com>"]
include = ["home_dashboard/py.typed"]

[tool.poetry.dependencies]
python = "^3.12"
anyio = "^4.0"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
websockets = "^15.0.1"
pydantic = "^2.10"
pydantic-settings = "^2.7"
jinja2 = "^3.1.0"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
python-json-logger = "^4.0.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
