name = "api-app"
version = "0.1.0"
description = "FastAPI backend for home dashboard"
authors = ["Jelle Hilbrands <jelle.hilbrands@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
httpx = "^0.25.0"
websockets = "^12.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
tizenws = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"