[tool.poetry]
name = "home-dashboard"
version = "0.1.0"
description = "Home Dashboard - unified frontend and backend"
authors = ["Jelle Hilbrands <jelle.hilbrands@outlook.com>"]
packages = [{include = "home_dashboard"}]
include = ["home_dashboard/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.0"
fastapi = "^0.122.0"
uvicorn = {version = "^0.32.0", extras = ["standard"]}
httpx = "^0.27.0"
websockets = "^12.0"
pydantic = "^2.10"
pydantic-settings = "^2.7"
jinja2 = "^3.1.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"