[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared data models for home-dashboard"
authors = ["Jelle Hilbrands, <jelle.hilbrands@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"  # same version you use in api_app/ui_app

[[tool.poetry.packages]]
include = "shared"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
