[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared data models for home-dashboard"
authors = ["Jelle Hilbrands, <jelle.hilbrands@outlook.com>"]
include = ["shared/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10"

[[tool.poetry.packages]]
include = "shared"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
