[tool.poetry]
name = "ui-app"
version = "0.1.0"
description = "Streamlit UI for home dashboard"
authors = ["Jelle Hilbrands <jelle.hilbrands@outlook.com>"]
packages = [{include = "ui_app"}]
include = ["ui_app/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^4.0"
streamlit = "^1.40.0"
httpx = "^0.27.0"
shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"